# gabriels-wm

./: .clang-format  CMakeLists.txt  LICENSE  README.md  run-xephyr.sh
notes/: compositor-sample.c
src/: FrameUtils.hpp  FrameWindow.cpp  FrameWindow.h  Log.hpp  WindowManager.cpp  WindowManager.h  firstWidow.cpp  firstWindow.h  log.cpp  main.cpp
src/archive/: firstWidow.cpp
src/base/: BaseWindow.hpp  BasicWindow.hpp  Color.hpp  Surface.hpp  SurfaceContext.hpp  consts.h  types.h
src/components/dash/: DashComponent.hpp
src/components/frame/: FrameComponent.hpp
src/components/panel/: PanelComponent.hpp
src/composite/: CompositeTest.cpp  CompositeTest.h
src/desktop/: Desktop.hpp  DesktopBase.hpp
src/frameWindow/: FrameWindow.cpp  FrameWindow.h  FrameWindowBase.hpp  FrameWindowResize.hpp  InitSizePosVec.h  ResizeDirection.h
src/kit/: Button.cpp  Button.h
src/launcher/: Laucher.cpp  Launcher.h  LauncherEntry.cpp  LauncherEntry.h
src/toolkit/: Button.cpp  Button.h  Central.cpp  Central.h  Elementor.cpp  Elementor.h  Tracer.cpp  Tracer.h
src/toolkit/base/: Color.cpp  Color.h  Cursors.cpp  Cursors.h
src/toolkit/events/: EventHandler.cpp  EventHandler.h  Events.h
src/toolkit/template-builder/: supportedTemplate.vtl  template-concept.evt  templateConcept.vtl
src/toolkit/utils/: WindowUtils.cpp  WindowUtils.h
src/utils/: codes.cpp  codes.h  log.cpp
